ejemplos-k8s/ingress/examples/service2.yml
kind: Service
apiVersion: v1
metadata:
  name: webserver-green-svc
spec:
  selector:
    role: webserver
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 31323
