ejemplos-k8s/ingress/examples/fan-out-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fan-out-ingress
  namespace: default
spec:
  rules:
  - host: example.com
    http:
      paths:
     - path: /blue
        backend:
          serviceName: webserver-blue-svc
          servicePort: 80
     - path: /green
        backend:
          serviceName: webserver-green-svc
          servicePort: 80
